program-libs/zero-copy/tests/derive/ui/fail/01_empty_struct.rs
// Edge case: Empty struct (unit struct)
#![cfg(feature = "mut")]
use light_zero_copy_derive::{ZeroCopy, ZeroCopyMut};

#[derive(ZeroCopy, ZeroCopyMut)]
#[repr(C)]
pub struct EmptyStruct;

fn main() {}
